<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/book_background"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/kimiagar"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:text="@string/writer1"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        android:text="@string/genre1"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        android:text="@string/year1"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="20dp"
        android:text="@string/translator1"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:text="@string/price1"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>



    <TextView
        android:id="@+id/writer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:id="@+id/genre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="150dp"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:id="@+id/year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="150dp"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:id="@+id/translator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="150dp"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>

    <TextView
        android:id="@+id/price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="150dp"
        android:textSize="30sp"
        android:textColor="#C7A89E"/>


</androidx.constraintlayout.widget.ConstraintLayout>